# software-architecture6

./: .envrc  Cargo.toml  Justfile  docker-compose-elasticsearch.yaml  docker-compose-postgresql.yaml  docker-compose-redis.yaml  docker-compose.yaml  flake.nix  rust-toolchain.toml
crates/softarch_driver_test/: Cargo.toml
crates/softarch_driver_test/tests/: health_checks.rs
crates/softarch_error_layer/: Cargo.toml
crates/softarch_error_layer/src/: lib.rs
